--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,13 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: #212121; */
     background-color: #060e23;
     padding: .5rem 1rem;
 	max-width: 100vw;
 }
 
 .Header a {
-    color: white;
+    color: whitesmoke;
 }
 
 .Header__menu {
@@ -73,7 +72,6 @@ a {
 .Header__menu-a:hover {
 	color: #0f86f7;
 	transition: 0.3s ease;
-	/* border-bottom: 4px solid #0f86f7; */
 }
 
 .Header__open-submenu {
@@ -81,20 +79,15 @@ a {
 }
 
 .Header__open-submenu:hover .Header__submenu {
-	/* display: block; */
-	/* opacity: 1; */
 	height: 140px;
 	transition: 0.3s ease;
 }
 
 .Header__submenu {
-	/* display: none; */
-	/* opacity: 0; */
 	height: 0;
 	overflow: hidden;
 	position: absolute;
 	background-color: #060e23;
-	/* background-color: #404040; */
 	border-radius: 3px;
 	top: 1.2rem;
 	left: -1.5rem;
@@ -120,7 +113,6 @@ a {
 	width: 70%;
 	display: inline-block;
 	vertical-align: top;
-	/* background-color: #fafafa; */
 }
 
 
@@ -130,9 +122,7 @@ a {
 .Slides {
 	position: relative;
 	overflow: hidden;
-	/* height: 400px; */
 	background-color: #091c3b;
-	/* background-color: #060e23; */
 	color: whitesmoke;
 }
 
@@ -201,7 +191,6 @@ a {
 .Slides__footer h4{
 	font-size: 1.5rem;
 	font-weight: 300;
-	/* color: whitesmoke; */
 	margin-right: .5rem;
 }
 
@@ -218,9 +207,6 @@ a {
 
 .Slides__footer a:hover{
 	background-color: #78fee9;
-	/* background-color: #0f86f7; */
-	/* transition: 0.3s ease; */
-	/* font-weight: 500; */
 	color: 	black;
 }
 
@@ -232,11 +218,9 @@ a {
 .Slides__body {
 	display: flex;
 	flex-direction: column;
-	/* justify-content: space-between; */
 	justify-content: space-around;
 	width: 90%;
 	height: 80%;
-	/* margin-top: 1rem; */
 }
 
 .Slides__body article {
@@ -249,17 +233,12 @@ a {
 }
 
 .Slides__body h2 {
-	/* background-color: #ec852f; */
 	color: #78fee9;
 	font-weight: 300;
-	/* color: #0f86f7; */
 }
 
 .Slides__body p {
 	font-weight: 300;
-	/* background-color: #ec852f; */
-	/* color: #78fee9; */
-	/* color: #0f86f7; */
 }
 
 .Slides__body img {
@@ -396,4 +375,14 @@ article > h2{
   }
   .icon-clipboard:before {
 	content: "\e9b8";
+  }
+
+
+
+  .colores {
+	  color: #060e23; /* background header */
+	  color: #0f86f7;
+	  color: #78fee9;
+	  color: #091c3b; /* background SLIDES */
+
   }
