--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ menu, nav, section, audio, video {
 html {
 	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
+	color: whitesmoke;
+
 }
 
 figcaption {
@@ -123,7 +125,7 @@ a {
 	position: relative;
 	overflow: hidden;
 	background-color: #091c3b;
-	color: whitesmoke;
+	/* color: whitesmoke; */
 }
 
 .Slides__prev, .Slides__next {
@@ -270,7 +272,8 @@ article > h2{
 	margin-top: 1.7rem;
 }
 
-
+/* VER TRANSICIONES!!!!!, PODEMOS CONSSEGUIR EL MISMO EFECTO CON TRANSOTION: EASE...???????? */
+/* VER TRANSICIONES!!!!!, PODEMOS CONSSEGUIR EL MISMO EFECTO CON TRANSOTION: EASE...???????? */
 
 .Slide__js {
 	animation-name: Slide__js;
@@ -287,6 +290,62 @@ article > h2{
         opacity: 1
     }
 }
+
+
+/* DESCRIPTION */
+
+.Description {
+	/* border-top: 1px solid white; */
+	padding-top: 3rem;
+	padding-bottom: 3rem;
+	background-color: #060e23;
+}
+.Description article{
+	width: 600px;
+	margin: auto;
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* flex-direction: row; */
+	/* width: 95%; */
+	/* justify-content: center; */
+	
+	/* align-items: center; */
+	/* align-content: center; */
+	/* align-self: center; */
+	/* padding: 1rem 0; */
+	/* margin-top: 5px; */
+	/* margin-bottom: 5px; */
+	/* background-color: #f6f4ee; */
+	/* background-color: #1b98ec; */
+	/* flex: 0 0 auto;  */
+
+	/* text-align: ; */
+	/* padding: 1rem; */
+}
+
+.Description h2 {
+	font-size: 3rem;
+	font-weight: 400;
+}
+
+.Description h3 {
+	font-size: 3rem;
+	font-weight: 400;
+	color: #78fee9;
+}
+.Description p {
+	margin-top: 2rem;
+	font-size: 1.5rem;
+	font-weight: 100;
+	font-style: italic;
+
+}
+
+
+
+
+
+
 
 /* ICONOS */
 
