--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #060e23;
+    background-color: #091c3b;
+    /* background-color: #060e23; */
     padding: .5rem 1rem;
 	max-width: 100vw;
 }
@@ -124,7 +125,8 @@ a {
 .Slides {
 	position: relative;
 	overflow: hidden;
-	background-color: #091c3b;
+	background-color: #060e23;
+	/* background-color: #091c3b; */
 	/* color: whitesmoke; */
 }
 
@@ -296,10 +298,12 @@ article > h2{
 
 .Description {
 	/* border-top: 1px solid white; */
-	padding-top: 3rem;
-	padding-bottom: 3rem;
-	background-color: #060e23;
+	padding-top: 6rem;
+	padding-bottom: 6rem;
+	/* background-color: #060e23; */
+	background-color: #091c3b;
 }
+
 .Description article{
 	width: 600px;
 	margin: auto;
@@ -341,6 +345,177 @@ article > h2{
 
 }
 
+/* FEATURES */
+
+.Features {
+	display: flex;
+	justify-content: space-around;
+	background-color: #060e23;
+	/* background-color: #091c3b; */
+	/* margin-bottom: .4rem; */
+	padding-bottom: 7rem;
+	padding-top: 6rem;
+	text-align: center;
+}
+
+.Features__article {
+	width: 25%;
+}
+
+.Features__article h4 {
+	font-size: 1.7rem;
+	/* background-color: #8019df; */
+	/* background-color: #fc6c7c; */
+	border: 1px solid #78fee9;
+	/* border: 1px solid #0f86f7; */
+	border-radius: 3px;
+	margin-top: 2rem;
+	font-weight: 300;
+	margin-bottom: 1rem;
+	/* color: white; */
+	/* border-radius: 20px; */
+	/* color: #1b98ec */
+}
+
+.Features__article p {	
+	font-size: 1.5rem;
+	font-weight: 100;
+	/* text-align: justify; */
+
+	/* color: #1b98ec */
+}
+
+.Features [class^="ico"] {
+	color: #78fee9;
+	font-size: 2.5rem;
+	
+}
+
+/* CURSOSLINK__ //////////////////////////////*/
+
+.CursosLink{
+	background-color: #060e23;
+	padding-top: 3rem;
+}
+.CursosLink__title{
+	font-size: 2rem;
+	margin-left: 1rem;
+	margin-right: 1rem;
+	font-weight: 300;
+	border-bottom: 4px solid #78fee9;
+	/* color: #0f86f7; */
+}
+
+
+
+.CursosLink__links {
+	/* background-color: #091c3b; */
+	/* opacity: .5; */
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 3rem 1rem;
+}
+
+.CursosLink article{
+	width: 280px;
+	position: relative;
+	/* text-align:center; */
+	/* margin: 0 auto; */
+	/* box-shadow: 0 8px 6px -6px whitesmoke; */
+	margin-bottom:  3rem;
+	border: 1px solid #0f86f7;
+}
+
+.CursosLink__layerHover{ /* azul claro al hacer hover*/
+	width: 100%;
+	position: absolute;
+	/* background-color: rgba(256,256,256,0); */
+	/* background-color: rgba(256,256,256,0); */
+	z-index: 4;
+	height: 100%;
+	transition: .5s ease;
+}
+
+.CursosLink__contentHover{
+	top: 5%;
+	left: 0;
+	right: 0;
+	margin-right: auto;
+	margin-left: auto;
+	width: 90%;
+	font-size: 1rem;
+	text-align: left;
+	opacity: 0;
+	z-index: 3;
+	transition: 1.5s ease;
+}
+
+.CursosLink img{
+	max-width: 100%;
+	opacity: .5;
+}
+
+
+.CursosLink__layerHover:hover{
+	background-color: #091c3b;
+	opacity: .9;
+	/* background-color: rgba(256,256,256,0.9); */
+	transition: .5s ease;
+}
+
+.CursosLink article:hover .CursosLink__contentHover{
+	opacity: 1;
+	transition: 1.5s ease;
+	margin-top: 2rem;
+}
+
+.CursosLink figure{
+	transition: .9s ease;
+}
+
+.CursosLink__contentHover P:nth-last-child(-n+3) {
+	color: #78fee9;
+	font-weight: 500;
+
+}
+.CursosLink__contentHover P:first-child {
+	font-size: 1.5rem;
+	font-weight: 500;
+
+}
+
+.CursosLink__contentHover p{
+	font-weight: 100;
+}
+
+
+.CursosLink .button{
+	/* background-color: #0f86f7; */
+
+	text-align: center;
+	border:  1px solid #78fee9;
+	bottom: 5%;
+	color: white;
+	font-size: 1.2rem;
+	padding: .4rem 0;
+	position: absolute;
+	right: 25%;
+	width: 50%;
+}
+
+.CursosLink h3{
+	top: 5%;
+	/* width: 80%; */
+	/* margin-left: 10%;  */
+	position:absolute;
+	color: whitesmoke;
+	padding: .5rem;
+	font-weight: 400;
+	/* background-color: #0f86f7 */
+	color: #0f86f7;
+
+}
 
 
 
