--- a/css/style.css
+++ b/css/style.css
@@ -423,32 +423,37 @@ article > h2{
 	/* text-align:center; */
 	/* margin: 0 auto; */
 	/* box-shadow: 0 8px 6px -6px whitesmoke; */
-	margin-bottom:  3rem;
+	/* margin-bottom:  3rem; */
 	border: 1px solid #0f86f7;
 }
 
 .CursosLink__layerHover{ /* azul claro al hacer hover*/
 	width: 100%;
+	height: 100%;
 	position: absolute;
 	/* background-color: rgba(256,256,256,0); */
 	/* background-color: rgba(256,256,256,0); */
-	z-index: 4;
-	height: 100%;
+	z-index: 1;
 	transition: .5s ease;
 }
 
 .CursosLink__contentHover{
-	top: 5%;
+	/* top: 5%;
 	left: 0;
 	right: 0;
 	margin-right: auto;
-	margin-left: auto;
-	width: 90%;
-	font-size: 1rem;
-	text-align: left;
+	margin-left: auto; */
+	margin-left: 1rem;
+	/* width: 90%; */
+	/* font-size: 1rem; */
+	/* text-align: left; */
 	opacity: 0;
-	z-index: 3;
-	transition: 1.5s ease;
+	/* z-index: 3; */
+	transition: .5s ease;
+}
+
+.CursosLink__contentHover p{
+	margin-bottom: .2rem;
 }
 
 .CursosLink img{
