--- a/css/style.css
+++ b/css/style.css
@@ -391,137 +391,141 @@ article > h2{
 	
 }
 
-/* CURSOSLINK__ //////////////////////////////*/
+/* Articulos__ //////////////////////////////*/
 
-.CursosLink{
+.Articulos{
 	background-color: #060e23;
 	padding-top: 3rem;
 }
-.CursosLink__title{
+
+.Articulos__title{
 	font-size: 2rem;
 	margin-left: 1rem;
 	margin-right: 1rem;
 	font-weight: 300;
-	border-bottom: 4px solid #78fee9;
-	/* color: #0f86f7; */
+	border-bottom: 4px solid #0f86f7;
 }
 
-
-
-.CursosLink__links {
-	/* background-color: #091c3b; */
-	/* opacity: .5; */
+.Articulos__links {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	padding: 3rem 1rem;
 }
 
-.CursosLink article{
+.Articulos article{
 	width: 280px;
 	position: relative;
-	/* text-align:center; */
-	/* margin: 0 auto; */
-	/* box-shadow: 0 8px 6px -6px whitesmoke; */
-	/* margin-bottom:  3rem; */
 	border: 1px solid #0f86f7;
 }
 
-.CursosLink__layerHover{ /* azul claro al hacer hover*/
+
+.Articulos img{
+	max-width: 100%;
+	opacity: .8;
+	/* transition: .9s ease; */
+}
+
+.Articulos__links h3{
+	top: 5%;
+	position:absolute;
+	color: whitesmoke;
+	padding: .5rem;
+	background-color: #0f86f7;
+	font-weight: 400;
+	/* color: #0f86f7; */
+}
+
+
+.Articulos__layerHover{ /* azul claro al hacer hover*/
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	/* background-color: rgba(256,256,256,0); */
-	/* background-color: rgba(256,256,256,0); */
 	z-index: 1;
 	transition: .5s ease;
 }
 
-.CursosLink__contentHover{
-	/* top: 5%;
-	left: 0;
-	right: 0;
-	margin-right: auto;
-	margin-left: auto; */
-	margin-left: 1rem;
-	/* width: 90%; */
-	/* font-size: 1rem; */
-	/* text-align: left; */
-	opacity: 0;
-	/* z-index: 3; */
-	transition: .5s ease;
-}
-
-.CursosLink__contentHover p{
-	margin-bottom: .2rem;
-}
-
-.CursosLink img{
-	max-width: 100%;
-	opacity: .5;
-}
-
-
-.CursosLink__layerHover:hover{
+.Articulos__layerHover:hover{
 	background-color: #091c3b;
 	opacity: .9;
-	/* background-color: rgba(256,256,256,0.9); */
-	transition: .5s ease;
 }
 
-.CursosLink article:hover .CursosLink__contentHover{
-	opacity: 1;
+.Articulos__texto{
+	margin-left: 1rem;
+	opacity: 0;
 	transition: 1.5s ease;
+}
+
+.Articulos__layerHover:hover .Articulos__texto{
+	opacity: 1;
 	margin-top: 2rem;
 }
 
-.CursosLink figure{
-	transition: .9s ease;
-}
-
-.CursosLink__contentHover P:nth-last-child(-n+3) {
-	color: #78fee9;
-	font-weight: 500;
-
-}
-.CursosLink__contentHover P:first-child {
-	font-size: 1.5rem;
-	font-weight: 500;
-
-}
-
-.CursosLink__contentHover p{
-	font-weight: 100;
-}
-
-
-.CursosLink .button{
-	/* background-color: #0f86f7; */
-
+.Articulos__button{
 	text-align: center;
 	border:  1px solid #78fee9;
+	position: absolute;
 	bottom: 5%;
 	color: white;
 	font-size: 1.2rem;
 	padding: .4rem 0;
-	position: absolute;
 	right: 25%;
 	width: 50%;
+	transition: .3s ease;
 }
 
-.CursosLink h3{
-	top: 5%;
-	/* width: 80%; */
-	/* margin-left: 10%;  */
-	position:absolute;
-	color: whitesmoke;
-	padding: .5rem;
-	font-weight: 400;
-	/* background-color: #0f86f7 */
-	color: #0f86f7;
-
+.Articulos__button:hover {
+	background-color: #78fee9;
+	color: #121212;
 }
 
+.Articulos__texto p{
+	font-weight: 100;
+	margin-bottom: .2rem;
+}
+
+.Articulos__texto P:nth-last-child(-n+3) {
+	color: #78fee9;
+	font-weight: 500;
+}
+
+.Articulos__texto P:first-child {
+	font-size: 1.5rem;
+	font-weight: 500;
+}
+
+
+
+
+
+
+
+.Articulos--blog
+.Articulos__title {
+	border-bottom: 4px solid #78fee9;
+}
+
+.Articulos--blog
+.Articulos article{
+	border: 1px solid #78fee9;
+}
+
+.Articulos--blog 
+.Articulos__links h3{
+	background-color: #78fee9;
+	color: #060e23;
+}
+
+.Articulos--blog
+.Articulos__button{
+	border:  1px solid #0f86f7;
+}
+
+.Articulos--blog
+.Articulos__button:hover {
+	background-color: #0f86f7;
+	color: #121212;
+}
 
 
 
