--- a/css/curso.css
+++ b/css/curso.css
@@ -8,8 +8,6 @@
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 	justify-content: space-around;
-	/* height: 1000px; */
-	/* align-content: space-around; */
 }
 
 .Info {
@@ -17,17 +15,9 @@
 }
 
 .Info h1 {
-	/* border-bottom: 2px solid #0f86f7; */
 	margin-bottom: 1rem;
-	/* padding-bottom: .3rem; */
-	/* width: 48vw; */
 	color: #1584d5;
-	/* text-align: center; */
 }
-
-/* .Info__general {
-	font-size: 1rem;
-} */
 
 .Info__general {
 	font-size: 1.1rem;
@@ -36,8 +26,6 @@
 .Info__general li {
 	margin-bottom: .5rem;
 }
-
-
 
 .Info__box {
 	width: max-content;
@@ -48,9 +36,7 @@
 	border-radius: 10px;
 	padding: .5rem 8rem;
 	margin-top: 2rem;
-	/* border: 1px solid #0f86f7; */
 	color: #1584d5;
-	/* color: #1584d5; */
 	font-weight: 500;
 	box-shadow: 0 8px 6px -6px grey;
 }
@@ -60,11 +46,17 @@
 	margin-top: .5rem;
 }
 
+.Info__bullet {
+	font-size: 1.2rem;
+}
+
+.Video {
+	width: 45%;
+}
+
 .Programa {
 	width: 45%;
 	margin-top: 4rem;
-	/* margin-left: auto; */
-	/* margin-right: auto; */
 }
 
 .Programa h3 {
@@ -74,22 +66,11 @@
 }
 
 .Programa__button {
-	/* background-color: #fff; */
 	background-color: #ccc;
-	/* color: #0f86f7; */
 	color: #666;
-	/* border: 1px solid #78fee9; */
-	/* color: #00bdff; */
 	cursor: pointer;
 	padding: .3rem .5rem;
 	width: 90%;
-	/* font-size: 2rem; */
-	/* border: 1px solid #00bdff; */
-	/* border-top: 0; */
-	/* border-left: 0; */
-	/* border-right: 0; */
-	/* border-bottom: 1px solid #f2f2f2; */
-	/* text-align: left; */
 	outline: none;
 	font-size: 1.2rem;
 	transition: 0.4s;
@@ -98,10 +79,6 @@
 .Programa__button.activado, .Programa__button:hover {
 	background-color: #999;
 	color: #333;
-	/* color: #3b94d9; */
-	/* color: #0f86f7; */
-	/* border: 1px solid #0f86f7; */
-	
 }
 
 .Programa__button:after {
@@ -117,68 +94,19 @@
 }
 
 .Programa__contenido {
-	/* padding: 0 18px; */
-	/* background-color: white; */
 	max-height: 0;
 	overflow: hidden;
 	transition: max-height 0.2s ease-out;
 	width: 90%;
 	margin-left: .5rem;
 	padding-bottom: .2rem;
-	/* z-index: 5; */
 }
 
 .Programa__contenido li {
 	border-bottom: 1px solid grey;
 	margin-top: .5rem;
 }
-
-.Info__box>ul li {}
-
-.bullet {
-	font-size: 1.2rem;
-}
-
-.Video {
-	width: 45%;
-}
-
-/* .Curso__info, .Curso__video-Mpago {
-	margin: 1rem;
-} */
-
-.Curso__description h2 {
-	/* background-color: #99d6ff; */
-	text-align: center;
-	color: #333;
-	display: block;
-	font-size: 1.5rem;
-	border-bottom: 3px solid #999;
-	margin-top: 1.5rem;
-	margin-bottom: 1rem;
-	padding-bottom: .5rem;
-	/* padding: .2rem .3rem; */
-	/* font-weight: bold; */
-}
-
-.Curso__description p, .Curso__description ul {
-	padding: .5rem 1rem;
-	margin-bottom: .5rem;
-}
-
-.Curso__description li {
-	margin-bottom: .3rem;
-}
-
-.Curso__details h3 {
-	text-align: center;
-	background-color: #f90f17;
-	color: white;
-	margin-bottom: 1rem;
-	/* border: 1px solid yellow; */
-	width: 40vw;
-}
-
+/* responsive */
 .Curso__video {
 	position: relative;
 	padding-bottom: 56.25%;
@@ -196,38 +124,18 @@
 	height: 100%;
 }
 
-/* .Curso__video iframe, .Curso__video object, .Curso__video embed {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-} */
-
-/* Curso__PROGRAMA */
-
-.Curso__programa h4 {
-	background-color: #0f86f7;
-	color: white;
-	margin-top: 1rem;
-}
-
-.Curso__programa strong {
-	display: block;
-	border-bottom: 1px solid #0f86f7;
-}
-
-.Curso__programa li {
-	border-bottom: 1px solid grey;
-	margin-top: .5rem;
-}
-
-.Curso__Mpago {
+.Pago {
 	width: 45%;
 }
 
-/* PAGO ////////////////////////////////*/
+/* .Pago__boton1,
+.Pago__boton2,
+.Pago__boton3,
+.Pago__boton4 {
+	display: none;
+} */
 
-.Curso__Mpago input, .Curso__Mpago label {
-	display: inline;
+.newClassName {
+	display: block;
 }
+
